# Hackathon-II-Todo-Spec-Driven-Development

./: .gitignore  README.md  database.db  main.py  pyproject.toml  test.db  validate_implementation.py
.claude/: settings.local.json
.specify/memory/: constitution.md
agent/: todo-agent.data-model.md  todo-agent.plan.md  todo-agent.quickstart.md  todo-agent.research.md  todo-agent.spec.md  todo-agent.tasks.md
backend/: alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/migrations/: 001_create_user_table.py  002_add_user_id_to_todo_table.py
backend/src/: database.py  main.py
backend/src/agents/: __init__.py  agent.py  intent_classifier.py
backend/src/api/: auth.py
backend/src/api/v1/endpoints/: todos.py
backend/src/auth/: config.py
backend/src/database/: connection.py  database.py
backend/src/models/: todo.py
backend/src/skills/: __init__.py  skill_interface.py  todo_create_skill.py  todo_update_skill.py
backend/src/utils/: logging_utils.py
backend/tests/: test_agent.py  test_chat_api.py  test_intent_classifier.py  test_skills.py
backend/tests/e2e/: test_auth_flow.py
backend/tests/integration/: test_todo_api.py
backend/tests/unit/: test_todo_model.py
docs/: authentication.md  chat-functionality.md
frontend/: .npmignore  jest.config.js  package-lock.json  package.json
huggingface-backend/: .gitignore  Dockerfile  README.md  app.py  entrypoint.py  huggingface.yaml  setup.py
skills/: create_todo.skill.md  delete_todo.skill.md  list_todos.skill.md  update_todo.skill.md
(+110 files in other folders)
