[project]
name = "todo_backend"
version = "0.1.0"
description = "FastAPI backend for the Todo app"
dependencies = [
    "fastapi==0.109.0",
    "sqlmodel==0.0.14",
    "uvicorn==0.27.0.post1",
    "psycopg2-binary==2.9.9",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pdm.dev-dependencies]
dev = [
    "pytest==8.0.0",
    "httpx==0.26.0",
    "alembic==1.13.1",
]
